outputs/run_1773662028465.txt
  File "<string>", line 1
    import os,requests,json,base64,subprocess,time,re; T='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'; R='AADI-playz23/absoracode'; M='qwen2.5-coder:14b'; os.system('curl -fsSL https://ollama.com | sh') if subprocess.run(['which','ollama'],capture_output=True).returncode!=0 else print('✅ Ollama found'); subprocess.Popen(['ollama','serve'],stdout=subprocess.DEVNULL,stderr=subprocess.DEVNULL); time.sleep(5); os.system(f'ollama pull {M}'); os.system('wget -q https://github.com -O cf && chmod +x cf') if not os.path.exists('cf') else None; p=subprocess.Popen(['./cf','tunnel','--url','http://localhost:11434'],stdout=subprocess.PIPE,stderr=subprocess.STDOUT,text=True); url=None; start=time.time();\nwhile time.time()-start<60:\n line=p.stdout.readline();\n if 'trycloudflare.com' in line:\n  m=re.search(r'https://[a-zA-Z0-9-]+\.trycloudflare\.com',line)\n  if m: url=m.group(0); print(f'\n✅ URL: {url}\n'); break\nif url:\n api=f'https://api.github.com{R}/contents/status.json'; h={'Authorization':f'token {T}','Accept':'application/vnd.github.v3+json'}; res=requests.get(api,headers=h); sha=res.json().get('sha') if res.status_code==200 else None; c=base64.b64encode(json.dumps({'brain_url':url,'last_updated':time.strftime('%Y-%m-%dT%H:%M:%SZ',time.gmtime())}).encode()).decode(); requests.put(api,headers=h,json={'message':'Update URL','content':c,'sha':sha}) if sha else requests.put(api,headers=h,json={'message':'Update URL','content':c}); print('🚀 GitHub Updated')\nwhile True: time.sleep(1)
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          ^
SyntaxError: unexpected character after line continuation character
